@@ -51,6 +51,8 @@ See wiki for details on parameters.
 			<land-enable type="bool">1</land-enable> <!-- Enable/Disable Autoland -->
 			<land-flap type="double">0.7</land-flap> <!-- Minimum Flap used for landing -->
 			<lnav-ft type="double">50</lnav-ft> <!-- AGL when LNAV becomes active if armed -->
+			<max-kts type="int">380</max-kts> <!-- Maxmimum target airspeed in knots -->
+			<max-mach type="double">0.9</max-mach> <!-- Maxmimum target mach number -->
 			<retard-enable type="bool">1</retard-enable> <!-- AGL to enter Thrust Retard mode -->
 			<retard-ft type="double">50</retard-ft> <!-- Enable Thrust Retard mode -->
 			<takeoff-hdg-cap type="double">5</takeoff-hdg-cap> <!-- Maximum bank to capture current hdg in T/O mode -->
